Mise à jour plugins.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,18 @@
 [submodule "bundle/ctrlp"]
 	path = bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim.git
+[submodule "vim-enter-indent"]
+	path = vim-enter-indent
+	url = https://github.com/acustodioo/vim-enter-indent.git
+[submodule "vim-easymotion"]
+	path = vim-easymotion
+	url = https://github.com/Lokaltog/vim-easymotion.git
+[submodule "bundle/nerdcommenter"]
+	path = bundle/nerdcommenter
+	url = https://github.com/scrooloose/nerdcommenter.git
+[submodule "bundle/vim-enter-indent"]
+	path = bundle/vim-enter-indent
+	url = https://github.com/acustodioo/vim-enter-indent.git
+[submodule "bundle/vim-easymotion"]
+	path = bundle/vim-easymotion
+	url = https://github.com/Lokaltog/vim-easymotion.git
